[package]
name = "json_parser"
version = "0.2.0"
edition = "2024"
default-run = "json_parser"

[dependencies]
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[[bin]]
name = "json_parser"
path = "src/main.rs"

[[bin]]
name = "simple_json_parser"
path = "src/main_simple.rs"

[[bin]]
name = "json_parser_enhanced"
path = "src/main_enhanced.rs"